NetBSD Problem Report #50619

From martin@duskware.de  Mon Jan  4 09:39:40 2016
Return-Path: <martin@duskware.de>
Received: from mail.netbsd.org (mail.NetBSD.org [199.233.217.200])
	(using TLSv1.2 with cipher ECDHE-RSA-AES256-GCM-SHA384 (256/256 bits))
	(Client CN "mail.netbsd.org", Issuer "Postmaster NetBSD.org" (verified OK))
	by mollari.NetBSD.org (Postfix) with ESMTPS id F1B247A214
	for <gnats-bugs@gnats.NetBSD.org>; Mon,  4 Jan 2016 09:39:39 +0000 (UTC)
From: martin@NetBSD.org
Reply-To: martin@NetBSD.org
To: gnats-bugs@NetBSD.org
Subject: sh or make broken: can not build on -current any more
X-Send-Pr-Version: 3.95

>Number:         50619
>Category:       toolchain
>Synopsis:       sh or make broken: can not build on -current any more
>Confidential:   no
>Severity:       critical
>Priority:       high
>Responsible:    toolchain-manager
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Mon Jan 04 09:40:02 +0000 2016
>Closed-Date:    Mon May 30 03:23:30 +0000 2016
>Last-Modified:  Mon May 30 03:23:30 +0000 2016
>Originator:     Martin Husemann
>Release:        NetBSD 7.99.25
>Organization:
The NetBSD Foundation, Inc.
>Environment:
System: NetBSD thirdstage.duskware.de 7.99.25 NetBSD 7.99.25 (MODULAR) #437: Tue Dec 29 14:05:18 CET 2015 martin@thirdstage.duskware.de:/usr/src/sys/arch/sparc64/compile/MODULAR sparc64
Architecture: sparc64
Machine: sparc64
>Description:

After updating a build machine to -current, further build.sh invocations
fail:

install ===> tools/config
params ===> .
--- params ---
#    create  params
sh: 3: Bad file descriptor
*** Failed target:  _params
*** Failed command: printf "%20s = '%-s'\n" BSDOBJDIR /usr/obj >&3
*** [params] Error code 1
nbmake[1]: stopped in /usr/src
1 error


>How-To-Repeat:
s/a

>Fix:
n/a

>Release-Note:

>Audit-Trail:
From: Robert Elz <kre@munnari.OZ.AU>
To: gnats-bugs@NetBSD.org
Cc: 
Subject: Re: toolchain/50619: sh or make broken: can not build on -current any more
Date: Mon, 04 Jan 2016 17:58:57 +0700

     Date:        Mon,  4 Jan 2016 09:40:02 +0000 (UTC)
     From:        martin@NetBSD.org
     Message-ID:  <20160104094002.1B2887ACB8@mollari.NetBSD.org>


   | 
   | After updating a build machine to -current, further build.sh invocations
   | fail:

 Try reverting christos' recent change ...


 To generate a diff of this commit:
 cvs rdiff -u -r1.44 -r1.45 src/bin/sh/cd.c
 cvs rdiff -u -r1.110 -r1.111 src/bin/sh/eval.c
 cvs rdiff -u -r1.46 -r1.47 src/bin/sh/input.c
 cvs rdiff -u -r1.37 -r1.38 src/bin/sh/redir.c
 cvs rdiff -u -r1.16 -r1.17 src/bin/sh/redir.h


From: Martin Husemann <martin@duskware.de>
To: gnats-bugs@NetBSD.org
Cc: 
Subject: Re: toolchain/50619: sh or make broken: can not build on -current any more
Date: Mon, 4 Jan 2016 12:23:53 +0100

 On Mon, Jan 04, 2016 at 11:00:01AM +0000, Robert Elz wrote:
 >  To generate a diff of this commit:
 >  cvs rdiff -u -r1.44 -r1.45 src/bin/sh/cd.c
 >  cvs rdiff -u -r1.110 -r1.111 src/bin/sh/eval.c
 >  cvs rdiff -u -r1.46 -r1.47 src/bin/sh/input.c
 >  cvs rdiff -u -r1.37 -r1.38 src/bin/sh/redir.c
 >  cvs rdiff -u -r1.16 -r1.17 src/bin/sh/redir.h

 Yes, tried that and it fixes the issue.

 Martin

From: christos@zoulas.com (Christos Zoulas)
To: gnats-bugs@NetBSD.org, toolchain-manager@netbsd.org, 
	gnats-admin@netbsd.org, netbsd-bugs@netbsd.org
Cc: 
Subject: Re: toolchain/50619: sh or make broken: can not build on -current any more
Date: Mon, 4 Jan 2016 08:35:13 -0500

 On Jan 4,  9:40am, martin@NetBSD.org (martin@NetBSD.org) wrote:
 -- Subject: toolchain/50619: sh or make broken: can not build on -current any

 | install ===> tools/config
 | params ===> .
 | --- params ---
 | #    create  params
 | sh: 3: Bad file descriptor
 | *** Failed target:  _params
 | *** Failed command: printf "%20s = '%-s'\n" BSDOBJDIR /usr/obj >&3
 | *** [params] Error code 1

 Do you know where that printf is coming from?

 christos

From: Martin Husemann <martin@duskware.de>
To: Christos Zoulas <christos@zoulas.com>
Cc: gnats-bugs@NetBSD.org
Subject: Re: toolchain/50619: sh or make broken: can not build on -current any more
Date: Mon, 4 Jan 2016 14:38:14 +0100

 On Mon, Jan 04, 2016 at 08:35:13AM -0500, Christos Zoulas wrote:
 > Do you know where that printf is coming from?

 src/etc/Makefile.params:

 # Internal targets:
 #       _params:
 #               Prints the names and values of all the variables
 #               listed in ${RELEASEVARS}.  The desired results may be
 #               redirected somewhere other than stdout, for example by
 #               setting _params_redirect='>&3'.  stdout and stderr may
 #               contain unwanted debugging information, from make and
 #               the shell.


 Martin

From: "Christos Zoulas" <christos@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/50619 CVS commit: src/bin/sh
Date: Mon, 4 Jan 2016 08:57:15 -0500

 Module Name:	src
 Committed By:	christos
 Date:		Mon Jan  4 13:57:15 UTC 2016

 Modified Files:
 	src/bin/sh: redir.c

 Log Message:
 PR/50619: Fix reversed test.


 To generate a diff of this commit:
 cvs rdiff -u -r1.38 -r1.39 src/bin/sh/redir.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

From: Martin Husemann <martin@duskware.de>
To: gnats-bugs@NetBSD.org
Cc: 
Subject: Re: toolchain/50619: sh or make broken: can not build on -current any more
Date: Mon, 4 Jan 2016 20:44:19 +0100

 The current /bin/sh works with the build system again.

 Martin

State-Changed-From-To: open->closed
State-Changed-By: dholland@NetBSD.org
State-Changed-When: Mon, 30 May 2016 03:23:30 +0000
State-Changed-Why:
fixed


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2014 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.