PR/50619: Fix reversed test.